setup angular service-worker

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/">
   <meta charset="utf-8">
   <title>NgFireUniversal</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Angular Universal + Firebase + PWA = NgFireUniversal">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="msapplication-starturl" content="/">
+  <meta name="theme-color" content="#ff8800">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
