add SEO service

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
   <title>NgFireUniversal</title>
   <meta name="Description" content="Angular Universal + Firebase + PWA = NgFireUniversal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@ngFireUniversal">
+  <meta name="twitter:title" content="Home">
+  <meta name="twitter:description" content="Angular Universal + Firebase + PWA = NgFireUniversal">
+  <meta name="twitter:image" content="https://i.imgur.com/HUtI2dw.png">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="ngFireUniversal">
+  <meta property="og:title" content="Home">
+  <meta property="og:description" content="Angular Universal + Firebase + PWA = NgFireUniversal">
+  <meta property="og:image" content="https://i.imgur.com/HUtI2dw.png">
+  <meta property="og:url" content="https://ng-fire-universal.firebaseapp.com">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#ff8800">
   <link rel="manifest" href="manifest.json">
