--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,10 @@
   <meta property="og:description" content="Angular Universal + Firebase + PWA = NgFireUniversal">
   <meta property="og:image" content="https://i.imgur.com/HUtI2dw.png">
   <meta property="og:url" content="https://ng-fire-universal.firebaseapp.com">
-  <meta name="theme-color" content="#ff8800">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="/assets/js/pwacompat.js"></script>
-  <script> // NOTE: PWA hack for iOS homescreen-oauth issue (https://goo.gl/mfrv87)
+  <script> // NOTE: Fix for PWA iOS homescreen / oAuth issue (https://goo.gl/mfrv87)
     var iOS = !!navigator.platform && /iPhone|iPod|iPad/.test(navigator.platform) && !window.MSStream;
     if (iOS) { document.querySelector('link[rel="manifest"]').setAttribute('rel', 'no-on-ios'); }</script>
 </head>
