lighthouse fixes + general cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <base href="/">
   <meta charset="utf-8">
   <title>ng-fire-universal</title>
+  <meta name="description" content="ng-fire-universal » Ship Angular + Firebase Apps to Google Cloud (Fast)">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
