add PWA + service worker capabilities

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,10 @@
   <title>ng-fire-universal</title>
   <meta name="description" content="ng-fire-universal » Ship Angular + Firebase Apps to Google Cloud (Fast)">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="theme-color" content="#6E42F4">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preload" href="/assets/fonts/roboto/roboto-v20-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/assets/fonts/roboto/roboto-v20-latin-500.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/assets/fonts/roboto/roboto-v20-latin-700.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/assets/fonts/roboto/roboto-v20-latin-900.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/assets/fonts/fa/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="manifest" href="manifest.webmanifest">
+  <script src="assets/js/pwacompat.min.js" defer></script>
 </head>
 <body>
   <app-root></app-root>
