--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>ng-fire-universal</title>
   <meta name="description" content="ng-fire-universal » Ship Angular + Firebase Apps to Google Cloud (Fast)">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
   <meta name="theme-color" content="#6E42F4">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  <script src="assets/js/pwacompat.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js" defer></script>
 </head>
 <body>
   <app-root></app-root>
