add SEO service

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
   <meta name="description" content="ng-fire-universal » Ship Angular + Firebase Apps to Google Cloud (Fast)">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
   <meta name="theme-color" content="#6E42F4">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@ngFireUniversal">
+  <meta name="twitter:title" content="ng-fire-universal">
+  <meta name="twitter:description" content="Ship Angular + Firebase Apps to Google Cloud (Fast)">
+  <meta name="twitter:image" content="https://ng-fire-universal.s3.amazonaws.com/icon.png">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="ng-fire-universal">
+  <meta property="og:title" content="ng-fire-universal">
+  <meta property="og:description" content="Ship Angular + Firebase Apps to Google Cloud (Fast)">
+  <meta property="og:image" content="https://ng-fire-universal.s3.amazonaws.com/icon.png">
+  <meta property="og:url" content="https://ng-fire.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <script src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js" defer></script>
